Style/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --black: #000000;
    --white: #ffffff;
    --grey: slategrey;
    --small: .5em;
    --medium: 1em;
    --large: 2em;
    --extra-large: 3em;
    font-family: 'Abyssinica SIL', serif;

}

body {
    background: radial-gradient(white, rgb(153, 149, 140));
    background-repeat: no-repeat;
    width: 100%;
    height: 100vh;
    border: 1px solid black;
}

header {
    background-color: hsl(197, 71%, 80%);
    box-sizing: border-box;

    text-align: center;
    width: 100%;
    height: auto;
    position: relative;
    font-size: 5vh;
    line-height: 1.25em;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    color: black;
    text-decoration: none;

    -webkit-text-stroke: 0.015em rgba(255, 255, 255, 0.5);

}



#content {
    display: flex;
    width: 100%;
    height: 90vh;


}

.fileList {
    width: 15%;
    height: 100%;

}

.textContent {
    width: 85%;
    height: 100%;
    /* padding-left: 0px;
    padding-right: 0px; */

}

.a {

    background-color: gainsboro;
    border-radius: 4px;
    height: 85%;
    background-color: gainsboro;
    border-radius: 4px;
    margin-top: 1em;
    /* padding: .5em; */
}

#text {
    /* margin: 0px 1em; */
    /* margin-right: 1em; */
    width: 100%;
    height: 100%;
    position: relative;
    resize: none;
    display: inline-block;

}

.toolStyle {
    padding-left: 2vw;
    padding-top: 0.3vw;
    width: 100%;
    height: 3em;
    display: flex;
    flex-direction: column;
    background-color: rgb(195, 208, 222);
    border-radius: 4px;
}

.tool>h5 {
    margin: auto;
}

#style {
    width: 90%;
    margin-bottom: 0em;
    display: flex;
    justify-content: space-between;
}


#save {

    cursor: pointer;
    outline: 0;
    color: #fff;
    background-color: #2be33b;
    border-color: #42de17;
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    text-align: center;
    border: 1px solid transparent;
    padding: 6px 12px;
    font-size: 16px;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;




}

#save:hover {


    color: #fff;
    background-color: #41cb1b;
    border-color: #6bd846;


}

#deleteAll {
    margin: auto 16px;
    cursor: pointer;
    outline: 0;
    color: #fff;
    background-color: #f90c0c;
    border-color: #fd150d;
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    text-align: center;
    border: 1px solid transparent;
    padding: 6px 12px;
    font-size: 16px;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;


}

#heading {
    position: relative;
    font-size: 5vh;
    line-height: 1.25em;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    color: transparent;
    text-decoration: none;
    -webkit-text-stroke: 0.015em rgba(255, 255, 255, 0.5);
}

#copyAll {
    cursor: pointer;
    outline: 0;
    color: #fff;
    background-color: #369deb;
    border-color: #369deb;
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    text-align: center;
    border: 1px solid transparent;
    padding: 6px 12px;
    font-size: 16px;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

#save>button :hover {
    color: #fff;
    background-color: #4de722;
    border-color: #42de17;
}

#deleteAll:hover {
    color: #fff;
    background-color: #d7190b;
    border-color: #d7190b;
}


#copyAll:hover {
    background-color: skyblue;
    background-color: #0b8ff5;

}

#bold-plain>button:hover {
    background-color: #e7c6ff;
    padding: auto;

}

#emp-nonemp {
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin-left: 16px;
    margin-right: 16px;
    flex-direction: row;
    cursor: pointer;
    outline: 0;
    font-weight: 400;
    line-height: 1.5;
    text-align: center;
    font-size: 1rem;
    border-radius: .25rem;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}


#underline-normal {
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-around;
    margin-left: 16px;
    margin-right: 16px;
    outline: 0;
    font-weight: 400;
    line-height: 1.5;
    text-align: center;
    font-size: 1rem;
    border-radius: .25rem;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

#bold-plain {
    /* margin: auto 16px; */
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-around;
}
#bold-plain>button{
    cursor: pointer;
    outline: 0;
    color: #fff;
    background-color: #17a2b8;
    border-color: #17a2b8;
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    text-align: center;
    border: 1px solid transparent;
    padding: 6px 12px;
    font-size: 16px;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}
#bold-plain>button:hover {
    background-color: #07889c !important;
    border-color: #07889c !important;
    padding: auto;
    cursor: pointer;
}
#emp-nonemp>button{
    cursor: pointer;
    outline: 0;
    color: #fff;
    background-color: #17a2b8;
    border-color: #17a2b8;
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    text-align: center;
    border: 1px solid transparent;
    padding: 6px 12px;
    font-size: 16px;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}
#emp-nonemp>button:hover {
    background-color: #07889c !important;
    border-color: #07889c !important;
    padding: auto;
    cursor: pointer;
    color: #fff;
}
#bold,#emphasized,#underline{
    margin-right: 15px;
}
#underline-normal>button{
    cursor: pointer;
    outline: 0;
    color: #fff;
    background-color: #17a2b8;
    border-color: #17a2b8;
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    text-align: center;
    border: 1px solid transparent;
    padding: 6px 12px;
    font-size: 16px;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}
#underline-normal>button:hover {
    background-color: #07889c !important;
    border-color: #07889c !important;
    padding: auto;
    cursor: pointer;
    color: #fff;
}

#bold-plain>button:hover {
    background-color: #0d6efd;
    padding: auto;

}

.list {
    cursor: pointer;
}

#content>div {
    background-color: #f1f1f1;
    margin: 10px;
    padding: 20px;
    font-size: 30px
}

ul>li:hover {
    color: bisque;

}

